force-app/main/default/objects/Proposal__c/fields/Abstract_of_proposed_work__c.field-meta.xml
<CustomField>
    <fullName>Abstract_of_proposed_work__c</fullName>
    <label>Abstract of proposed work</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>