force-app/main/default/objects/Proposal__c/fields/Acronym__c.field-meta.xml
<CustomField>
    <fullName>Acronym__c</fullName>
    <label>Acronym</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>