force-app/main/default/objects/Proposal__c/fields/Aims_and_Hypotheses__c.field-meta.xml
<CustomField>
    <fullName>Aims_and_Hypotheses__c</fullName>
    <description>Aims &amp; Hypotheses</description>
    <inlineHelpText>Aims &amp; Hypotheses</inlineHelpText>
    <label>Aims &amp; Hypotheses</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>