force-app/main/default/objects/Proposal__c/fields/All_Committee_Response_Submitted__c.field-meta.xml
<CustomField>
    <fullName>All_Committee_Response_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Becomes true, when all the Committee Members submits their response.</description>
    <label>All Committee Response Submitted</label>
    <type>Checkbox</type>
</CustomField>