force-app/main/default/objects/Proposal__c/fields/Alternative_Facility_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Facility_Arrangements__c</fullName>
    <description>Alternative arrangements for the facilities not available at the Host Institution.</description>
    <inlineHelpText>Alternative arrangements for the facilities not available at the Host Institution.</inlineHelpText>
    <label>Alternative Facility Arrangements</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>