force-app/main/default/objects/Proposal__c/fields/Animal_Associated_Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Animal_Associated_Cost_Total__c</fullName>
    <formula>BLANKVALUE(Animal_Associated_cost_Year1__c, 0) +
BLANKVALUE(Animal_Associated_cost_Year2__c, 0) +
BLANKVALUE(Animal_Associated_cost_Year3__c, 0) +
BLANKVALUE(Animal_Associated_cost_Year4__c, 0) +
BLANKVALUE(Animal_Associated_cost_Year5__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Associated Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>