force-app/main/default/objects/Proposal__c/fields/Animal_Associated_cost_Year3__c.field-meta.xml
<CustomField>
    <fullName>Animal_Associated_cost_Year3__c</fullName>
    <label>Animal Associated cost Year3</label>
    <summarizedField>Animals__c.Animal_Associated_cost_Year3__c</summarizedField>
    <summaryForeignKey>Animals__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>