force-app/main/default/objects/Proposal__c/fields/Animal_Procedures_Require_Approval__c.field-meta.xml
<CustomField>
    <fullName>Animal_Procedures_Require_Approval__c</fullName>
    <description>Does your proposal include procedures to be carried out on animals which require formal approval?</description>
    <inlineHelpText>Does your proposal include procedures to be carried out on animals which require formal approval?</inlineHelpText>
    <label>Animal Procedures Require Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>