force-app/main/default/objects/Proposal__c/fields/Any_Hospital_Clinical_Facility_To_Be_Use__c.field-meta.xml
<CustomField>
    <fullName>Any_Hospital_Clinical_Facility_To_Be_Use__c</fullName>
    <label>Any Hospital Clinical Facility To Be Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I propose to use facilities within a hospital/clinic.</fullName>
            </value>
            <value>
                <fullName>My research involves patients being cared for by a hospital/clinical facility.</fullName>
            </value>
            <value>
                <fullName>My research does not require hospital/clinic facility.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>