force-app/main/default/objects/Proposal__c/fields/Application_Alignment_with_Lab_Research__c.field-meta.xml
<CustomField>
    <fullName>Application_Alignment_with_Lab_Research__c</fullName>
    <description>How does the application align with your lab’s research?</description>
    <inlineHelpText>How does the application align with your lab’s research?</inlineHelpText>
    <label>Application Alignment with Lab Research</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>