force-app/main/default/objects/Proposal__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>