force-app/main/default/objects/Proposal__c/fields/Application_Stages__c.field-meta.xml
<CustomField>
    <fullName>Application_Stages__c</fullName>
    <label>Application Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prelims</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>