force-app/main/default/objects/Proposal__c/fields/Approved_Grant_Total__c.field-meta.xml
<CustomField>
    <fullName>Approved_Grant_Total__c</fullName>
    <label>Approved Grant Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>