force-app/main/default/objects/Proposal__c/fields/Background_And_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Background_And_Rationale__c</fullName>
    <description>Background &amp; Rationale</description>
    <inlineHelpText>Background &amp; Rationale</inlineHelpText>
    <label>Background And Rationale</label>
    <length>18000</length>
    <type>Html</type>
</CustomField>