force-app/main/default/objects/Proposal__c/fields/Background_Current_Status_and_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Background_Current_Status_and_Rationale__c</fullName>
    <description>Background, Current Status and Rationale</description>
    <inlineHelpText>Background, Current Status and Rationale</inlineHelpText>
    <label>Background, Current Status and Rationale</label>
    <length>42768</length>
    <type>Html</type>
</CustomField>