force-app/main/default/objects/Proposal__c/fields/Biohazards_Safety_Precautions_Animal_Exp__c.field-meta.xml
<CustomField>
    <fullName>Biohazards_Safety_Precautions_Animal_Exp__c</fullName>
    <description>What biohazards are associated with animal experimentation and what safety precautions are required?</description>
    <inlineHelpText>What biohazards are associated with animal experimentation and what safety precautions are required?</inlineHelpText>
    <label>Biohazards Safety Precautions Animal Exp</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>