force-app/main/default/objects/Proposal__c/fields/Budget_Cap__c.field-meta.xml
<CustomField>
    <fullName>Budget_Cap__c</fullName>
    <formula>Yearly_Scheme__r.Budget_Cap__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>