force-app/main/default/objects/Proposal__c/fields/CCSEA_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>CCSEA_Registration_Number__c</fullName>
    <description>Provide the CCSEA registration number for the institution where the animal work will be conducted.</description>
    <inlineHelpText>Provide the CCSEA registration number for the institution where the animal work will be conducted.</inlineHelpText>
    <label>CCSEA Registration Number</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>