force-app/main/default/objects/Proposal__c/fields/Committee_Feedback_Summary__c.field-meta.xml
<CustomField>
    <fullName>Committee_Feedback_Summary__c</fullName>
    <label>Committee Feedback Summary</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>