force-app/main/default/objects/Proposal__c/fields/Committee_Review_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Committee_Review_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When 2 Committee Members submits their response this checkbox becomes true.</description>
    <inlineHelpText>When 2 Committee Members submits their response this checkbox becomes true.</inlineHelpText>
    <label>Committee Review Submitted</label>
    <type>Checkbox</type>
</CustomField>