force-app/main/default/objects/Proposal__c/fields/Conferences_Academic_Presentations__c.field-meta.xml
<CustomField>
    <fullName>Conferences_Academic_Presentations__c</fullName>
    <description>Conferences and Academic Presentations</description>
    <inlineHelpText>Conferences and Academic Presentations</inlineHelpText>
    <label>Conferences &amp; Academic Presentations</label>
    <length>7768</length>
    <type>Html</type>
</CustomField>