force-app/main/default/objects/Proposal__c/fields/Conflict_of_Interest_Description__c.field-meta.xml
<CustomField>
    <fullName>Conflict_of_Interest_Description__c</fullName>
    <label>Conflict of Interest Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>