force-app/main/default/objects/Proposal__c/fields/Conflicts_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_of_interest__c</fullName>
    <description>Conflicts of interest: Check if any of your below positions might have an interest in the results of the proposed research?</description>
    <inlineHelpText>Conflicts of interest: Check if any of your below positions might have an interest in the results of the proposed research?</inlineHelpText>
    <label>Conflicts of interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research sponsorship agreement</fullName>
            </value>
            <value>
                <fullName>Consultancies</fullName>
            </value>
            <value>
                <fullName>Equity holdings</fullName>
            </value>
            <value>
                <fullName>Directorships</fullName>
            </value>
            <value>
                <fullName>Other affiliations</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>