force-app/main/default/objects/Proposal__c/fields/Current_Position_At_Host_Institution__c.field-meta.xml
<CustomField>
    <fullName>Current_Position_At_Host_Institution__c</fullName>
    <description>What is your current position at the Host Institution, if any?</description>
    <inlineHelpText>What is your current position at the Host Institution, if any?</inlineHelpText>
    <label>Current Position At Host Institution</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>