force-app/main/default/objects/Proposal__c/fields/Describe_WOHI_Plan_and_Sponsor_s__c.field-meta.xml
<CustomField>
    <fullName>Describe_WOHI_Plan_and_Sponsor_s__c</fullName>
    <description>If identified External Sponsor(s) for Work Outside the Host Institution (WOHI), provide brief details of the plan.</description>
    <inlineHelpText>If identified External Sponsor(s) for Work Outside the Host Institution (WOHI), provide brief details of the plan.</inlineHelpText>
    <label>Describe WOHI Plan and Sponsor(s)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>