force-app/main/default/objects/Proposal__c/fields/Details_of_Substantial_Moderate_Procedur__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Substantial_Moderate_Procedur__c</fullName>
    <description>Provide details of any procedures of substantial or moderate severity.</description>
    <inlineHelpText>Provide details of any procedures of substantial or moderate severity.</inlineHelpText>
    <label>Details of Substantial Moderate Procedur</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>