force-app/main/default/objects/Proposal__c/fields/Do_you_wish_to_add_plans_for_WOHI__c.field-meta.xml
<CustomField>
    <fullName>Do_you_wish_to_add_plans_for_WOHI__c</fullName>
    <description>Do you wish to add plans for WOHI?</description>
    <inlineHelpText>Do you wish to add plans for WOHI?</inlineHelpText>
    <label>Do you wish to add plans for WOHI?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>