force-app/main/default/objects/Proposal__c/fields/Eligible_For_Full__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Full__c</fullName>
    <inlineHelpText>When 2 Grant Team Members confirms eligibility check, then the application is eligible for full</inlineHelpText>
    <label>Eligible For Full</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Eligibility_Status</valueSetName>
    </valueSet>
</CustomField>