force-app/main/default/objects/Proposal__c/fields/Exp_Procedure_cost_Year2__c.field-meta.xml
<CustomField>
    <fullName>Exp_Procedure_cost_Year2__c</fullName>
    <label>Exp-Procedure cost Year2</label>
    <summarizedField>Animals__c.Exp_Procedure_cost_Year2__c</summarizedField>
    <summaryForeignKey>Animals__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>