force-app/main/default/objects/Proposal__c/fields/Experimental_Design_Methods__c.field-meta.xml
<CustomField>
    <fullName>Experimental_Design_Methods__c</fullName>
    <description>Experimental Design &amp; Methods</description>
    <inlineHelpText>Experimental Design &amp; Methods</inlineHelpText>
    <label>Experimental Design &amp; Methods</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>