force-app/main/default/objects/Proposal__c/fields/Experiments_Terminal_or_Post_Monitored__c.field-meta.xml
<CustomField>
    <fullName>Experiments_Terminal_or_Post_Monitored__c</fullName>
    <description>Are the experiments on the animals terminal or will the animal be monitored post procedure?</description>
    <inlineHelpText>Are the experiments on the animals terminal or will the animal be monitored post procedure?</inlineHelpText>
    <label>Experiments Terminal or Post-Monitored</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>