force-app/main/default/objects/Proposal__c/fields/Full_details_of_experiments__c.field-meta.xml
<CustomField>
    <fullName>Full_details_of_experiments__c</fullName>
    <description>Full details of experiments (humans, animals, organoids etc.)</description>
    <inlineHelpText>Full details of experiments (humans, animals, organoids etc.)</inlineHelpText>
    <label>Full details of experiments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>