force-app/main/default/objects/Proposal__c/fields/Give_Brief_Details__c.field-meta.xml
<CustomField>
    <fullName>Give_Brief_Details__c</fullName>
    <description>Give Brief Details</description>
    <label>Give Brief Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>