force-app/main/default/objects/Proposal__c/fields/Grand_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Cost__c</fullName>
    <label>Grand Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>