force-app/main/default/objects/Proposal__c/fields/Grants_Feedback_Summary__c.field-meta.xml
<CustomField>
    <fullName>Grants_Feedback_Summary__c</fullName>
    <description>Grants team&apos;s feedback summary recorded alongside the Eligible for Full / Rejected decision on reviewerRatingMatrix.</description>
    <label>Grants Feedback Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>