force-app/main/default/objects/Proposal__c/fields/Host_Institution_Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Host_Institution_Infrastructure__c</fullName>
    <description>Host Institution infrastructure of direct relevance to the proposed project. Include core facilities.</description>
    <inlineHelpText>Host Institution infrastructure of direct relevance to the proposed project. Include core facilities.</inlineHelpText>
    <label>Host Institution Infrastructure</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>