force-app/main/default/objects/Proposal__c/fields/IAEC_Review_Status_and_Timelines__c.field-meta.xml
<CustomField>
    <fullName>IAEC_Review_Status_and_Timelines__c</fullName>
    <description>Specify if the project has been reviewed/will be reviewed by IAEC, with timelines.</description>
    <inlineHelpText>Specify if the project has been reviewed/will be reviewed by IAEC, with timelines.</inlineHelpText>
    <label>IAEC Review Status and Timelines</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>