force-app/main/default/objects/Proposal__c/fields/If_identified_External_Sponsor_s_for_Wo__c.field-meta.xml
<CustomField>
    <fullName>If_identified_External_Sponsor_s_for_Wo__c</fullName>
    <description>If identified External Sponsor(s) for Work Outside the Host Institution (WOHI), provide brief details of the plan.</description>
    <inlineHelpText>If identified External Sponsor(s) for Work Outside the Host Institution (WOHI), provide brief details of the plan.</inlineHelpText>
    <label>If identified External Sponsor(s) for Wo</label>
    <length>12768</length>
    <type>LongTextArea</type>
</CustomField>