force-app/main/default/objects/Proposal__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>Impact</description>
    <inlineHelpText>Impact</inlineHelpText>
    <label>Impact</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>