force-app/main/default/objects/Proposal__c/fields/Includes_Human_Participants_Stem_Cells__c.field-meta.xml
<CustomField>
    <fullName>Includes_Human_Participants_Stem_Cells__c</fullName>
    <description>Does your proposal include working with human participants, experiments with human stem cells, biological samples, or personal data?</description>
    <inlineHelpText>Does your proposal include working with human participants, experiments with human stem cells, biological samples, or personal data?</inlineHelpText>
    <label>Includes Human Participants, Stem Cells</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>