force-app/main/default/objects/Proposal__c/fields/Intellectual_Property_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Intellectual_Property_Commercial__c</fullName>
    <description>Intellectual Property &amp; Commercialization</description>
    <inlineHelpText>Intellectual Property &amp; Commercialization</inlineHelpText>
    <label>Intellectual Property &amp; Commercial</label>
    <length>7768</length>
    <type>Html</type>
</CustomField>