force-app/main/default/objects/Proposal__c/fields/Interview_Status__c.field-meta.xml
<CustomField>
    <fullName>Interview_Status__c</fullName>
    <label>Interview Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Pre-Interview</fullName>
            </value>
            <value>
                <fullName>Interview Schedule</fullName>
            </value>
            <value>
                <fullName>Post Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>