force-app/main/default/objects/Proposal__c/fields/Maintenance_cost_Year1__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_cost_Year1__c</fullName>
    <label>Maintenance cost Year1</label>
    <summarizedField>Animals__c.Maintenance_cost_Year1__c</summarizedField>
    <summaryForeignKey>Animals__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>