force-app/main/default/objects/Proposal__c/fields/Mentor_Country__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Country__c</fullName>
    <label>Mentor Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>