force-app/main/default/objects/Proposal__c/fields/Mentor_Designation__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Designation__c</fullName>
    <label>Mentor Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>