force-app/main/default/objects/Proposal__c/fields/Mentor_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Organisation__c</fullName>
    <label>Mentor Organisation</label>
    <length>123</length>
    <type>Text</type>
</CustomField>