force-app/main/default/objects/Proposal__c/fields/Moved_to_Full_Stage_By_Grant_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Full_Stage_By_Grant_Team_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Any of the Grant Team Member can move the application to Full Stage</inlineHelpText>
    <label>Moved to Full Stage By Grant Team Member</label>
    <type>Checkbox</type>
</CustomField>