force-app/main/default/objects/Proposal__c/fields/Name_Address_of_Hospital_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Name_Address_of_Hospital_Clinic__c</fullName>
    <description>Provide the name and address of Hospital and clinical facility.</description>
    <inlineHelpText>Provide the name and address of Hospital and clinical facility.</inlineHelpText>
    <label>Name &amp; Address of Hospital/Clinic</label>
    <type>TextArea</type>
</CustomField>