force-app/main/default/objects/Proposal__c/fields/No_Work_on_animals_or_animal_tissue__c.field-meta.xml
<CustomField>
    <fullName>No_Work_on_animals_or_animal_tissue__c</fullName>
    <description>Tick where appropriate. My Proposal involves.</description>
    <inlineHelpText>Tick where appropriate. My Proposal involves.</inlineHelpText>
    <label>No Work on animals or animal tissue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>