force-app/main/default/objects/Proposal__c/fields/Number_of_Postdocs_Trained_In_Your_Lab__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Postdocs_Trained_In_Your_Lab__c</fullName>
    <description>Number of postdocs trained in your laboratory.</description>
    <inlineHelpText>Number of postdocs trained in your laboratory.</inlineHelpText>
    <label>Number of Postdocs Trained In Your Lab</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>