force-app/main/default/objects/Proposal__c/fields/Objectives_Aims__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Aims__c</fullName>
    <description>Objectives/Aims</description>
    <inlineHelpText>Objectives/Aims</inlineHelpText>
    <label>Objectives/Aims</label>
    <length>12768</length>
    <type>Html</type>
</CustomField>