force-app/main/default/objects/Proposal__c/fields/Old_Proposal_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Proposal_Id__c</fullName>
    <label>Prelims Proposal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>