force-app/main/default/objects/Proposal__c/fields/Other_Regulatory_Bodies_and_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Other_Regulatory_Bodies_and_Timeline__c</fullName>
    <description>If not, list the regulatory bodies responsible for ethical review of the project and indicate the expected timeline. Any additional regulatory approval obtained or anticipated may be listed.</description>
    <inlineHelpText>If not, list the regulatory bodies responsible for ethical review of the project and indicate the expected timeline. Any additional regulatory approval obtained or anticipated may be listed.</inlineHelpText>
    <label>Other Regulatory Bodies and Timeline</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>