force-app/main/default/objects/Proposal__c/fields/Outline_of_proposed_research__c.field-meta.xml
<CustomField>
    <fullName>Outline_of_proposed_research__c</fullName>
    <description>Outline: 1. Background and identified research gaps 2. Research questions/objectives/aims 3. Approaches 4. Expected Outcomes</description>
    <inlineHelpText>Outline of proposed research</inlineHelpText>
    <label>Outline of proposed research</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>