force-app/main/default/objects/Proposal__c/fields/Peer_Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Peer_Application_Stage__c</fullName>
    <label>Peer Application Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Applicant Submitted</fullName>
            </value>
            <value>
                <fullName>Final Submit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>