force-app/main/default/objects/Proposal__c/fields/Policy_Practice_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Policy_Practice_Engagement__c</fullName>
    <description>Policy and Practice Engagement</description>
    <inlineHelpText>Policy and Practice Engagement</inlineHelpText>
    <label>Policy &amp; Practice Engagement</label>
    <length>7768</length>
    <type>Html</type>
</CustomField>