force-app/main/default/objects/Proposal__c/fields/Prelim_Reviewer_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Reviewer_Eligibility_Status__c</fullName>
    <description>Set to &apos;Submitted&apos; once at least 2 Reviewer_Mapping__c records for the Prelims stage on this Proposal have Status__c = &apos;Submitted&apos;. Set by ReviewerMappingTriggerHandler.</description>
    <label>Prelim Reviewer Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>