force-app/main/default/objects/Proposal__c/fields/Prelim_Reviewers_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Reviewers_Ratings__c</fullName>
    <label>Prelim Reviewers Ratings</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>